2002-05-08  Charles Wilson  <cwilson@ece.gatech.edu>
            Alexandre Duret-Lutz  <duret_g@epita.fr>

	* lib/am/progs.am (clean-%DIR%PROGRAMS): If Libtool is used, clean
	both `program$(EXEEXT)' and `program'; needed under Cygwin.
	* tests/libtool3.test: New file.
	* tests/Makefile.am (TESTS): Add libtool3.test.

2002-05-06  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* Makefile.am (FETCHFILES, fetch): Get INSTALL from Autoconf CVS.

2002-05-06  Alexandre Duret-Lutz  <duret_g@epita.fr>

	Erase stamps from the Makefile that generates them.

	* automake.in (handle_configure): Append each used stamp to
	@distclean_config.  Don't warn about stamp-h in AC_OUTPUT, this
	file is not used anymore.
	* lib/am/clean.am (distclean-generic): Don't erase stamp-h and
	stamp-h[0-9]*.
	* tests/subdir6.test: New file.
	* tests/Makefile.am (TESTS): Add it.

2002-05-06  Tom Tromey  <tromey@redhat.com>

	* automake.texi (Program and Library Variables): Mention _LFLAGS.

2002-04-30  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* lib/am/ltlib.am (clean-%DIR%LTLIBRARIES): Erase so_locations
	files.  Fix subobj9.test on OSF and IRIX.
	Reported by Nelson H. F. Beebe.

2002-04-26  Tom Tromey  <tromey@redhat.com>

	* lib/am/dejagnu.am (distclean-DEJAGNU): New target.
	For Debian bug 144221.

2002-04-26  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* tests/man2.test: Use `pwd`, not $PWD.  Use $MAKE -e.

2002-04-25  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* automake.in (subobjname): Use the length of %subobjvar
	instead	of $subobjnamenum.
	(subobjnamenum): Remove.

2002-04-25  Alexandre Duret-Lutz  <duret_g@epita.fr>

	For PR automake/307:
	* lib/depcomp: Never compute dependencies in the background, this
	can cause races with libtool.  Compute the dependencies after
	the actual compilation.  Don't make libtool silent now that
	it's run in the foreground.
	* tests/pr307.test: New file.
	* tests/Makefile.am (TESTS): Add pr307.test.
	Reported by Laurent Morichetti.
