@@ -24,6 +24,7 @@ Bill Currie		bcurrie@tssc.co.nz
 Bill Davidson		bill@kayhay.com
 Bill Fenner		fenner@parc.xerox.com
 Bob Proulx		rwp@hprwp.fc.hp.com
+Braden N. McDaniel	braden@endoframe.com
 Brendan O'Dea		bod@compusol.com.au
 Brian Ford		ford@vss.fsi.com
 Brian Jones		cbj@nortel.net
