@@ -60,6 +60,7 @@ comment2.test \
 comment3.test \
 comment4.test \
 comment5.test \
+comment6.test \
 compile_f_c_cxx.test \
 cond.test \
 cond2.test \
