@@ -1,0 +1,46 @@
+#! /bin/sh
+# Test for PR/322.
+
+. $srcdir/defs || exit 1
+
+set -e
+
+cat >> configure.in <<'EOF'
+AC_OUTPUT
+EOF
+
+## There are two tests: one with backslashed comments at the top
+## of the file, and one with a rule first.  This is because
+## Comments at the top of the file are handled specially
+## since Automake 1.5.
+
+cat > Makefile.am << 'EOF'
+# SOME_FILES = \
+         file1 \
+         file2 \
+         file3
+
+all-local:
+	@echo Good
+
+EOF
+
+$ACLOCAL
+$AUTOCONF
+$AUTOMAKE
+./configure
+$MAKE
+
+cat > Makefile.am << 'EOF'
+all-local:
+	@echo Good
+
+# SOME_FILES = \
+         file1 \
+         file2 \
+         file3
+EOF
+
+$AUTOMAKE
+./configure
+$MAKE
