@@ -1,3 +1,13 @@
+2002-05-14  Alexandre Duret-Lutz  <duret_g@epita.fr>
+
+	Fix for PR automake/322:
+	* automake.in (read_am_file): Rename $was_rule as $prev_state, and
+	set it with IN_RULE_DEF, IN_VAR_DEF, or IN_COMMENT as appropriate.
+	Handle comments continued by backslashes.
+	* tests/comment6.test: New file.
+	* tests/Makefile.am (TESTS): Add comment6.test.
+	Reported by Braden N. McDaniel.
+
 2002-05-08  Charles Wilson  <cwilson@ece.gatech.edu>
             Alexandre Duret-Lutz  <duret_g@epita.fr>
 
